tests/paczka1/small_fuzzy/99856685.err
Error in line 6: A885 A885 68,1
Error in line 14: lJProd7cyJ A885 -1,0
